--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="./common.js"></script>
     <title>yiyun</title>
-  </head>
-  <body>
+</head>
+<body>
     <noscript>
       <strong>We're sorry but yiyun doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 
-<style>
-* {
+  <style>
+  * {
     padding:0;
     margin:0;
 }
@@ -93,8 +94,8 @@ a{
     margin: 0 auto;
     float: none;
     display: block;
-  }
+}
 
 </style>
-  </body>
+</body>
 </html>
