--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="format-detection" content="telephone=yes"/>
     <script src="./common.js"></script>
     <title>yiyun</title>
 
