--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="format-detection" content="telephone=yes"/>
     <script src="./common.js"></script>
-    <title>yiyun</title>
+    <title>圈豆商城</title>
 
 </head>
 <body>
     <noscript>
-      <strong>We're sorry but yiyun doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>你的浏览器不支持该网页，请更新到最新版</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
