--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="format-detection" content="telephone=yes"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <script src="./common.js"></script>
     <title>圈豆商城</title>
 
