--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,14 @@ div, dl, dt, dd, form, h1, h2, h3, h4, h5, h6, img, ol, ul, li, table, th, td, p
 img, input ,button{
     border:none;
     vertical-align:middle;
-    float: left;
+    /*float: left;*/
 }
 img{
     width: 100%;
 }
 body {
     font-family:Tahoma, Arial, Helvetica, "宋体";
-    font-size:.2rem;
+    font-size:.12rem;
     color:#000;
 }
 html {
