--- a/public/index.html
+++ b/public/index.html
@@ -33,15 +33,14 @@ div, dl, dt, dd, form, h1, h2, h3, h4, h5, h6, img, ol, ul, li, table, th, td, p
 img, input ,button{
     border:none;
     vertical-align:middle;
-    /*float: left;*/
 }
 img{
     width: 100%;
 }
 body {
-    font-family:Tahoma, Arial, Helvetica, "宋体";
-    font-size:.12rem;
-    color:#000;
+    font-family:"Microsoft YaHei";
+    font-size:.24rem;
+    color:#515C6F;
 }
 html {
     overflow-y:scroll;
@@ -50,7 +49,7 @@ ul, ol {
     list-style:none;
 }
 th, td, input {
-    /*font-size:.12rem*/
+    font-size:.24rem
 }
 input {
     outline:none;
@@ -58,12 +57,12 @@ input {
     box-shadow:none;
 }
 h3 {
-    font-size:.14rem
+    /*font-size:.14rem*/
 }
 button {
     border:none;
     cursor:pointer;
-    font-size:.12rem;
+    font-size:.24rem;
     background-color:transparent;
 }
 select {
@@ -71,7 +70,7 @@ select {
     _zoom:1;
     border-style:solid;
     padding-top:2px;
-    font-size:.12rem;
+    font-size:.24rem;
 }
 .clear {
     clear:both;
