--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <script src="./common.js"></script>
-    <title>圈豆商城</title>
+    <!-- <title>圈豆商城</title> -->
+    <title>测试商城</title>
 
 </head>
 <body>
