--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     padding:0;
     margin:0;
 }
-div, dl, dt, dd, form, h1, h2, h3, h4, h5, h6, img, ol, ul, li, table, th, td, p, span, a {
+div, dl, dt, dd, form, h1, h2, h3, h4, h5, h6, img, ol, ul, li, p, span, a {
     border:0;
     font-weight: normal;
 }
@@ -73,6 +73,16 @@ select {
     padding-top:2px;
     font-size:.24rem;
 }
+table {
+    display: table;
+    border-collapse: collapse;
+    border: 1.0000pt solid #000000;
+    width:100%;
+}
+table tr td{
+    border: 1.0000pt solid #000000;
+}
+
 .clear {
     clear:both;
     font-size:1px;
