--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,6 @@
 }
 div, dl, dt, dd, form, h1, h2, h3, h4, h5, h6, img, ol, ul, li, p, span, a {
     border:0;
-    font-weight: normal;
 }
 img, input ,button{
     border:none;
@@ -38,7 +37,7 @@ img{
     width: 100%;
 }
 body {
-    font-family:"Microsoft YaHei";
+    /*font-family:"Microsoft YaHei";*/
     font-size:.24rem;
     color:#515C6F;
 }
